--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="page_1">Page 1</string>
     <string name="page_2">Page 2</string>
     <string name="branch_select">Select Branch</string>
+    <string name="Semester">Semester</string>
 
     <string-array name="Branch_Name">
         <item>EC</item>
@@ -102,6 +103,7 @@
     <string name="select_year">Select Students Year</string>
     <string name="select_subject">Select Subjects</string>
     <string name="select_time">Select Time</string>
+    <string name="Search_button">Search</string>
 
 </resources>
 
